# readme_gen

./: Cargo.toml  README.md  settings.json
src/: data.rs  main.rs
